chore: Removed old legacy character details page (#327)
fix: When navigating back from the character details page to the character overview, it will now correctly scroll the character into view (#327)

feat: Added two new context items to the character overview right click menu. "Disable all mods" and "Open Folder..." (#327)

chore(Genshin): Updated some existing character's images (#327)

chore: Added a button to open the cached download folder that JASM uses on the settings page (#327)

--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -42,15 +42,31 @@
                         <FontIcon Glyph="&#xE777;" />
                     </MenuFlyoutItem.Icon>
                 </MenuFlyoutItem>
-                <MenuFlyoutSeparator />
+
                 <MenuFlyoutItem
-                    Command="{x:Bind ViewModel.ClearNotificationsCommand}"
+                    Command="{x:Bind ViewModel.OpenCharacterFolderCommand}"
                     CommandParameter="{Binding}"
-                    Text="Clear Notifications">
+                    Text="Open folder...">
                     <MenuFlyoutItem.Icon>
-                        <FontIcon Glyph="&#xE894;" />
+                        <FontIcon Glyph="&#xE8DA;" />
                     </MenuFlyoutItem.Icon>
                 </MenuFlyoutItem>
+                <MenuFlyoutSeparator />
+                <MenuFlyoutSubItem Text="Mods">
+                    <MenuFlyoutItem
+                        Command="{x:Bind ViewModel.ClearNotificationsCommand}"
+                        CommandParameter="{Binding}"
+                        Text="Clear Notifications">
+                        <MenuFlyoutItem.Icon>
+                            <FontIcon Glyph="&#xE894;" />
+                        </MenuFlyoutItem.Icon>
+                    </MenuFlyoutItem>
+                    <MenuFlyoutSeparator />
+                    <MenuFlyoutItem
+                        Command="{x:Bind ViewModel.DisableCharacterModsCommand}"
+                        CommandParameter="{Binding}"
+                        Text="Disable all mods" />
+                </MenuFlyoutSubItem>
             </MenuFlyout>
         </Grid.Resources>
 
