--- a/src/GIMI-ModManager.WinUI/Views/Settings/SettingsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Settings/SettingsPage.xaml
@@ -152,14 +152,6 @@
 
                 </StackPanel>
 
-                <TextBlock Text="Legacy: " />
-
-                <CheckBox
-                    Command="{x:Bind ViewModel.ToggleLegacyCharacterDetailsCommand}"
-                    Content="Use old legacy character details page (this setting will be removed later)"
-                    IsChecked="{x:Bind ViewModel.LegacyCharacterDetails, Mode=OneWay}"
-                    ToolTipService.ToolTip="The character details page is where you see the mods in a grid. This page has been rewritten. Due to potential bugs arising there is a transition period where the old version will still be available. This checkbox will be removed at some point." />
-
                 <TextBlock
                     Style="{ThemeResource SubtitleTextBlockStyle}"
                     Text="Language"
@@ -369,7 +361,10 @@
                                 ValueChanged="LocalCacheSlider_OnValueChanged"
                                 Value="{x:Bind ViewModel.MaxCacheLimit, Mode=OneWay}" />
                             <TextBlock VerticalAlignment="Center" Text="{x:Bind ViewModel.MaxCacheSizeString, Mode=OneWay}" />
+                            <controls:LinkButton Link="{x:Bind ViewModel.ArchiveCacheFolderPath}" Text="Open cache folder..." />
+
                         </StackPanel>
+
                     </StackPanel>
 
 
